tests/rosetta/out/Zig/aks-test-for-primes.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenaks-test-for-primes3685807683/001/prog.zig:59:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/TestMochiZigGoldenaks-test-for-primes3685807683/001/prog.zig:59:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
